--- a/index.html
+++ b/index.html
@@ -4,8 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <!-- Bootstrap -->
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
+    <!-- ?? Header -->
+
+    <section>
+      <div class="container text-center my-5">
+        <header>
+          <h1 class="fw-bold">Meet our Team</h1>
+          <p class="mt-5">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
+            incidunt velit iure consectetur asperiores provident quaerat dolores
+            itaque magni. Voluptatem, doloribus ad praesentium a porro quidem
+            adipisci dolorem alias natus.
+          </p>
+        </header>
+      </div>
+    </section>
+
+    <!-- ?? Card section -->
+
+    <section>
+      <div class="container">
+        <row>
+          <div class="col-sm-12 col-m4-6 col-lg-4"></div>
+          <div class="col-sm-12 col-m4-6 col-lg-4"></div>
+          <div class="col-sm-12 col-m4-6 col-lg-4"></div>
+        </row>
+        <row>
+          <div class="col-sm-12 col-m4-6 col-lg-4"></div>
+          <div class="col-sm-12 col-m4-6 col-lg-4"></div>
+          <div class="col-sm-12 col-m4-6 col-lg-4"></div>
+        </row>
+      </div>
+    </section>
     <script src="./js/script.js"></script>
   </body>
 </html>
