--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
+
+    <!-- Stylesheet -->
+
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- ?? Header -->
@@ -34,17 +38,71 @@
     <!-- ?? Card section -->
 
     <section>
-      <div class="container">
-        <row>
-          <div class="col-sm-12 col-m4-6 col-lg-4"></div>
-          <div class="col-sm-12 col-m4-6 col-lg-4"></div>
-          <div class="col-sm-12 col-m4-6 col-lg-4"></div>
-        </row>
-        <row>
-          <div class="col-sm-12 col-m4-6 col-lg-4"></div>
-          <div class="col-sm-12 col-m4-6 col-lg-4"></div>
-          <div class="col-sm-12 col-m4-6 col-lg-4"></div>
-        </row>
+      <div class="container text-center mt-5">
+        <div class="row g-3">
+          <div class="col-md-4 col-lg-4">
+            <div class="d-flex justify-content-around">
+              <img src="./img/female1.png" alt="" class="img-member" />
+              <div class="d-flex justify-content-around flex-column">
+                <p class="d-inline">Lorem ipsum.</p>
+                <p class="d-inline">Lorem</p>
+                <p class="d-inline">Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-4">
+            <div class="d-flex justify-content-around">
+              <img src="./img/female1.png" alt="" class="img-member" />
+              <div class="d-flex justify-content-around flex-column">
+                <p class="d-inline">Lorem ipsum.</p>
+                <p class="d-inline">Lorem</p>
+                <p class="d-inline">Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-4">
+            <div class="d-flex justify-content-around">
+              <img src="./img/female1.png" alt="" class="img-member" />
+              <div class="d-flex justify-content-around flex-column">
+                <p class="d-inline">Lorem ipsum.</p>
+                <p class="d-inline">Lorem</p>
+                <p class="d-inline">Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-3">
+          <div class="col-md-4 col-lg-4">
+            <div class="d-flex justify-content-around">
+              <img src="./img/female1.png" alt="" class="img-member" />
+              <div class="d-flex justify-content-around flex-column">
+                <p class="d-inline">Lorem ipsum.</p>
+                <p class="d-inline">Lorem</p>
+                <p class="d-inline">Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-4">
+            <div class="d-flex justify-content-around">
+              <img src="./img/female1.png" alt="" class="img-member" />
+              <div class="d-flex justify-content-around flex-column">
+                <p class="d-inline">Lorem ipsum.</p>
+                <p class="d-inline">Lorem</p>
+                <p class="d-inline">Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-4">
+            <div class="d-flex justify-content-around">
+              <img src="./img/female1.png" alt="" class="img-member" />
+              <div class="d-flex justify-content-around flex-column">
+                <p class="d-inline">Lorem ipsum.</p>
+                <p class="d-inline">Lorem</p>
+                <p class="d-inline">Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <script src="./js/script.js"></script>
