--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 
     <section>
       <div class="container text-center mt-5">
-        <div class="row g-3">
-          <div class="col-md-4 col-lg-4">
+        <div class="row g-5" id="members-row">
+          <!-- <div class="col-md-4 col-lg-4">
             <div class="d-flex justify-content-around">
               <img src="./img/female1.png" alt="" class="img-member" />
               <div class="d-flex justify-content-around flex-column">
-                <p class="d-inline">Lorem ipsum.</p>
-                <p class="d-inline">Lorem</p>
-                <p class="d-inline">Lorem ipsum dolor sit.</p>
+                <p class="d-inline" id="member-name">Lorem ipsum.</p>
+                <p class="d-inline" id="member-role">Lorem</p>
+                <p class="d-inline" id="member-email">Lorem ipsum dolor sit.</p>
               </div>
             </div>
           </div>
@@ -101,7 +101,7 @@
                 <p class="d-inline">Lorem ipsum dolor sit.</p>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
