--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section>
       <div class="container text-center my-5">
         <header>
-          <h1 class="fw-bold">Meet our Team</h1>
+          <h1 class="fw-bold text-danger">Meet our Team</h1>
           <p class="mt-5">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
             incidunt velit iure consectetur asperiores provident quaerat dolores
