bonus task, form control added to the html

--- a/index.html
+++ b/index.html
@@ -42,6 +42,24 @@
         <div class="row g-5" id="members-row"></div>
       </div>
     </section>
+
+    <!-- ?? Form section -->
+    <section>
+      <div class="container text-start mt-5">
+        <form id="add-member" class="form-control">
+          <label for="img-member">Immagine</label>
+          <input type="text" id="img-member" class="form-control" />
+          <label for="name-member">Nome</label>
+          <input type="text" id="name-member" class="form-control" />
+          <label for="role-member">Ruolo</label>
+          <input type="text" id="role-member" class="form-control" />
+          <label for="email-member">Email</label>
+          <input type="text" id="email-member" class="form-control" />
+          <button class="btn btn-primary mt-5">Aggiungi</button>
+        </form>
+      </div>
+    </section>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
