added js for new member form

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
       <div class="container text-start mt-5">
         <form id="add-member" class="form-control">
           <label for="img-member">Immagine</label>
-          <input type="text" id="img-member" class="form-control" />
+          <input
+            type="text"
+            id="img-member"
+            class="form-control"
+            value="img\download.jpg"
+          />
           <label for="name-member">Nome</label>
           <input type="text" id="name-member" class="form-control" />
           <label for="role-member">Ruolo</label>
